# icc-week-announce

./: CONTRIBUTING.md  README.md  netlify.toml  pelicanconf.py  pyproject.toml
content/: announce.md
content/css/: members.css
content/pages/: member_orgs.md
content/posts/: announce.md
