[tool.poetry]
name = "icc-week-announce"
version = "0.1.0"
description = ""
authors = ["Jack Laxson <jackjrabbit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.1"
Markdown = "^3.1"

[tool.poetry.dev-dependencies]
invoke = "^1.2"
livereload = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
